# ghostseeder

./: .gitignore  Dockerfile  README.md  autostart.sh  cli.py  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
ghostseeder/: __init__.py  __main__.py  ghostseeder.py
tests/: conftest.py  test_ghostseeder.py
