[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostseeder"
description = "This Python script spoofs seeding of torrent files to private trackers by sending fake announces."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "asynciolimiter==1.0.0b1",
    "flatbencode>=0.2.1",
    "httpx>=0.23.3",
    "semver>=2.13.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jephdo/ghostseeder"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "pytest_httpx==0.21.3",
    "pytest-asyncio==0.20.3",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "--log-level DEBUG"
testpaths = [
    "tests",
]